Mailto links no longer parsed

--- a/spec/fixtures/single_link_page.html
+++ b/spec/fixtures/single_link_page.html
@@ -18,5 +18,6 @@
         <img src="/images/an-image.svg" >
         <img data-src="something-else">
         <a href="#features">the features</a>
+        <a href="mailto:help@email.com">email</a>
     </body>
 </html>
